package edu.uees.factory;

public interface Notificador {

    void enviar(String destino, String mensaje);
}
