package edu.uees.factory;

public abstract class NotificadorCreator {

    public abstract Notificador crearNotificador();
}
